force-app/main/default/objects/ATR_Choice__c/ATR_Choice__c.object-meta.xml
<CustomObject>
    <label>ATR Choice</label>
    <nameField>
        <displayFormat>ATR Choice-{0000}</displayFormat>
        <label>ATR Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATR Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>