force-app/main/default/objects/ATR_Choice__c/fields/ATR_Question__c.field-meta.xml
<CustomField>
    <fullName>ATR_Question__c</fullName>
    <label>ATR Question</label>
    <referenceTo>ATR_Question__c</referenceTo>
    <relationshipLabel>ATR Choices</relationshipLabel>
    <relationshipName>ATR_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>